2003-08-06  Not Zed  <NotZed@Ximian.com>

	* em-format-html-display.c (efhd_format_attachment): Added bonobo
	embeddables.

2003-08-01 Harry Lu  <harry.lu@sun.com>

	*Fix for bug #6951

	* mail-display.c (launch_cb): Bypass the new added menu item.
	(save_all_parts_cb): New function. Do the real save-all work.
	(save_all_parts): New function. Get the directory to save to.
	(save_all_cb): New function. The call-back function for the new 
	added menu item.
	(pixmap_press): Add the new menu item "Save All Attachment...".
	(ptr_array_free_notify): A simple wrapper function to free the
	pointer array.
	(do_attachment_header): Save attachment pointer in an array for 
	"Save All Attachment" use.

2003-08-01  Yuedong Du  <yuedong.du@sun.com>

	* message-browser.c: (on_key_press): close mail message window
	using 'ESC' key, fix bug #47087

2003-07-28  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-crypto.c: Removed smime functions as they were stale.

2003-07-25  Jeffrey Stedfast  <fejj@ximian.com>

	* message-browser.c (message_browser_new): Handle our own Delete
	key presses. Fixes bug #45597.

2003-07-23  Jeffrey Stedfast  <fejj@ximian.com>

	* mail-format.c (mail_format_data_wrapper_write_to_stream): Revert
	prior changes.

2003-07-23  Dan Winship  <danw@ximian.com>

	* folder-browser.c (message_list_drag_data_get): Fix type warnings
	(folder_browser_toggle_caret_mode): Remove unused variable.

	* folder-browser-ui.c (basename): remove unused function

	* mail-account-gui.c (mail_account_gui_build_extra_conf): Fix
	warnings

	* mail-callbacks.c (empty_trash): Remove unused variable.

	* mail-display.c: #include gal/widgets/e-gui-utils.h for
	e_auto_kill_popup_menu_on_selection_done

	* mail-importer.c: #include e-util/e-path.h for e_path_to_physical

	* mail-session.c (main_play_sound): don't declare filename to be
	const and then free it.

	* mail-vfolder.c (vfolder_edit_rule, vfolder_gui_add_rule): Fix
	casts

	* message-list.c (build_flat_diff): Fix a typo in the